tests/__snapshots__/validation-project-tsconfig-incompatible-stderr.snap.txt
Error: Option 'bundler' can only be used when 'module' is set to 'preserve', 'commonjs', or 'es2015' or later. ts(5095)

  2 |   "compilerOptions": {
  3 |     "module": "node18",
  4 |     "moduleResolution": "bundler"
    |                         ~~~~~~~~~
  5 |   },
  6 |   "extends": "../../tsconfig.json",
  7 |   "include": [

      at ./tsconfig.json:4:25

Error: Option 'moduleResolution' must be set to 'Node16' (or left unspecified) when option 'module' is set to 'Node18'. ts(5109)

  2 |   "compilerOptions": {
  3 |     "module": "node18",
  4 |     "moduleResolution": "bundler"
    |                         ~~~~~~~~~
  5 |   },
  6 |   "extends": "../../tsconfig.json",
  7 |   "include": [

      at ./tsconfig.json:4:25

